app/[locale]/styles/partials/_navigation.scss
@use "../mixins" as *;
@use "./mixins" as *;
@use "./vars" as *;

.navigation {
  @include flex(row, space-between, center);
  z-index: 10;
  position: relative;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  padding: 1rem 1.2rem 0;
  gap: 1.5rem;

  @include useScreen("mobile-xl") {
    padding: 1.2rem 1.4rem 0;
  }
  @include useScreen("tablet-sm") {
    padding: 1.4rem 1.6rem 0;
  }
  @include useScreen("tablet-lg") {
    padding: 1.6rem 1.8rem 0;
  }
  @media screen and (min-width: 1200px) {
    width: 1200px;
  }
  @include useScreen("desktop-md") {
    padding: 1.8rem 2rem 0;
  }
}

.fixed-header {
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;

  @media screen and (min-width: 1200px) {
    left: calc((100vw / 2) - 600px);
  }
}

.container-items {
  @include flex(row, space-between, center);
  padding: 0.3rem 0.6rem;
  border-radius: var(--border-radius--lg);
  gap: 1rem;

  &__frame {
    background: var(--color--white);
    @include box-shadow-5(var(--color--grey-dark));
  }

  &__item {
    > a {
      color: var(--color--blue-grey-1);
      font-weight: var(--font-weight--normal-2);

      @include useOnHover {
        color: var(--color--orange-3);
      }
      @include useOnClick {
        color: var(--color--orange-2);
      }
    }
  }

  &__item-color {
    > a {
      color: var(--color--white-grey);

      @include useOnHover {
        color: var(--color--light-blue-1);
      }
      @include useOnClick {
        color: var(--color--light-blue-3);
      }
    }
  }
}
[data-theme="dark"] .container-items {
  background: var(--color--blue-grey-4);

  &__item {
    > a {
      color: var(--color--white-grey);

      @include useOnHover {
        color: var(--color--light-blue-3);
      }
      @include useOnClick {
        color: var(--color--light-blue-2);
      }
    }
  }

  &__item-color {
    > a {
      color: var(--color--blue-grey-2);
      @include useOnHover {
        color: var(--color--orange-3);
      }
      @include useOnClick {
        color: var(--color--light-blue-2);
      }
    }
  }
}

.navigation-items {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding: 0.3rem 0.7rem;
  border-radius: var(--border-radius--lg);
  gap: 1rem;

  @include useScreen("mobile-lg") {
    gap: 2rem;
  }

  @include useScreen("tablet-xl") {
    flex-wrap: nowrap;
    justify-content: space-between;
  }

  &__item {
    > a {
      color: var(--color--blue-grey-1);
      font-weight: var(--font-weight--normal-2);

      @include useOnHover {
        color: var(--color--orange-3);
      }
      @include useOnClick {
        color: var(--color--orange-2);
      }
    }
  }

  &__item-color {
    > a {
      color: var(--color--white-grey);

      @include useOnHover {
        color: var(--color--light-blue-2);
      }
      @include useOnClick {
        color: var(--color--light-blue-3);
      }
    }
  }
}
[data-theme="dark"] .navigation-items {
  &__item {
    > a {
      color: var(--color--white-grey);

      @include useOnHover {
        color: var(--color--light-blue-3);
      }
      @include useOnClick {
        color: var(--color--light-blue-2);
      }
    }
  }
  &__item-color {
    > a {
      color: var(--color--blue-grey-2);

      @include useOnHover {
        color: var(--color--orange-1);
      }
      @include useOnClick {
        color: var(--color--orange-3);
      }
    }
  }
}

.active-menu {
  transform: scale(var(--scale));
  > a {
    color: var(--color--light-blue-3);
  }

  &__banner {
    > a {
      color: var(--color--light-blue-1);
    }
  }
}
[data-theme="dark"] .active-menu {
  > a {
    color: var(--color--orange-2);
  }

  &__banner {
    > a {
      color: var(--color--orange-2);
    }
  }
}

.burger {
  &-backdrop {
    opacity: 0;
    visibility: hidden;
    z-index: 99;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: var(--color--dark-opacity);

    &__active {
      opacity: 1;
      visibility: visible;
    }
  }

  &-background {
    opacity: 0;
    z-index: 102;
    position: fixed;
    top: 0;
    left: 0;
    width: 50%;
    height: 100vh;
    background: var(--color--white);
    transition: var(--transition);
    transform: translateY(-100%);

    &__active {
      opacity: 1;
      transition: var(--transition);
      transform: translateY(0);
    }
  }

  &-column {
    display: flex;
    z-index: 103;
    position: relative;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: 100%;
    padding: 8rem 2rem;
    overflow: auto;
    gap: 4rem;

    @include useScreen("mobile-lg") {
      padding: 8rem 4rem;
    }
    @include useScreen("mobile-xl") {
      padding: 8rem 5rem;
    }
  }

  &-switchers {
    z-index: 110;
    background: var(--color--white-grey);
  }
}
[data-theme="dark"] .burger {
  &-background {
    background: var(--color--blue-grey-4);
  }

  &-switchers {
    background: var(--color--blue-grey-3);
  }
}

.visible {
  opacity: 1;
  transition: var(--transition);
}
.invisible {
  opacity: 0;
  transition: var(--transition);
}

